--- a/src Blog/package.json
+++ b/src Blog/package.json
@@ -10,7 +10,6 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@testing-library/react": "^16.2.0",
-    "@toolpad/core": "^0.12.0",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
